--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,15 +37,19 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: ex_linux-x86_64
+      - run: mv ex-rs ex_linux-x86_64
       - uses: actions/download-artifact@v4
         with:
           name: ex_macos-x86_64
+      - run: mv ex-rs ex_macos-x86_64
       - uses: actions/download-artifact@v4
         with:
           name: ex_macos-aarch64
+      - run: mv ex-rs ex_macos-aarch64
       - uses: actions/download-artifact@v4
         with:
           name: ex_windows-x86_64
+      - run: mv ex-rs.exe ex_windows-x86_64.exe
       - uses: softprops/action-gh-release@v2
         if: github.ref_type == 'tag'
         with:
@@ -53,4 +57,4 @@ jobs:
             ex_linux-x86_64
             ex_macos-x86_64
             ex_macos-aarch64
-            ex_windows-x86_64
+            ex_windows-x86_64.exe
